--- a/package.json
+++ b/package.json
@@ -28,9 +28,14 @@
     "not Explorer <= 11"
   ],
   "dependencies": {
+    "@fortawesome/react-fontawesome": "0.1.18",
+    "@fortawesome/free-brands-svg-icons": "5.15.4",
     "classnames": "2.3.1",
     "react": "17.0.2",
+    "react-bootstrap": "2.3.1",
     "react-dom": "17.0.2",
+    "react-feather": "2.0.9",
+    "react-perfect-scrollbar": "1.5.8",
     "react-router-dom": "6.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^2.1.4"
